# test_task

./: db.sqlite3  keys.json  pyproject.toml
data/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
data/migrations/: 0001_initial.py  0002_rename_key_customer_customerkeys_google_docs_and_more.py
data/services/: customer_service.py  google_docs_client_mock.py  sfkb_mock.py
djangoProject/: celery.py  settings.py  urls.py
